// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditScanConfigDialog component tests should render dialog 1`] = `
.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -5px;
}

.c33 > * {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c33 > * {
  margin-left: 5px;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c21 {
  cursor: pointer;
}

.c20 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c20 * {
  height: inherit;
  width: inherit;
}

.c22 {
  overflow: hidden;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c40 {
  overflow: hidden;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  display: none;
  height: 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #c8d3d9;
  position: relative;
}

.c16 {
  margin: 0 0 1px 0;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  word-break: break-all;
  min-width: 100px;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 3px;
  margin-top: -2px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102,102,102,0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c51 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c50 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient( -45deg, transparent, transparent 2px, #000 2px, #000 3px );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #787878;
  border-radius: 3px;
  border: 1px solid #787878;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #519032;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #519032;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5:hover {
  color: #fff;
  background: #519032;
}

.c4 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c4 * {
  height: inherit;
  width: inherit;
}

.c49 {
  display: inline-block;
  padding: 0 15px;
  color: #393637;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #aaaaaa;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c49:focus,
.c49:hover {
  border: 1px solid #393637;
}

.c49:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #66c430;
  font-weight: bold;
  color: #fff;
}

.c49[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c49 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c49:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #393637;
}

.c48 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c47 {
  border: 1px solid #787878;
  color: #519032;
  background: #87d050;
}

.c47:hover {
  color: #fff;
  background: #519032;
}

.c46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #c8d3d9;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #787878;
  color: #fff;
  font-weight: bold;
  background: #66c430;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c7 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  overflow: hidden;
  height: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c10 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 16.66666667%;
  margin-left: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 83.33333333%;
  padding-left: 10px;
  padding-right: 10px;
}

.c24 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c24 th,
.c24 td {
  padding: 4px 10px;
  border-bottom: 1px solid #c8d3d9;
}

.c24 tfoot tr {
  background: #fff;
}

.c24 tfoot tr td {
  border-bottom: 1px solid #c8d3d9;
}

.c42 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: fixed;
  width: 100%;
}

.c42 th,
.c42 td {
  padding: 4px 10px;
  border-bottom: 1px solid #c8d3d9;
}

.c42 tfoot tr {
  background: #fff;
}

.c42 tfoot tr td {
  border-bottom: 1px solid #c8d3d9;
}

.c25 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
}

.c25 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000;
}

.c26 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
}

.c28 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
  width: 9em;
}

.c43 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
  width: 30%;
}

.c44 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
  width: 10%;
}

.c13 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #393637;
  background-color: #fff;
  background-image: none;
  border: 1px solid #aaaaaa;
  border-radius: 2px;
  padding: 1px 8px;
}

.c13:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: normal;
  cursor: pointer;
}

.c36 {
  font-family: inherit;
  font-size: inherit;
  padding: 0;
  margin: 0;
  margin-left: 10px;
  line-height: normal;
  width: auto;
  height: auto;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c45 {
  overflow-wrap: break-word;
}

@media print {
  .c21 {
    display: none;
  }
}

@media print {
  .c24 {
    border-collapse: collapse;
  }
}

@media screen {
  .c24 > tbody:nth-of-type(even),
  .c24 > tbody:only-of-type > tr:nth-of-type(even) {
    background: #eeeeee;
  }

  .c24 > tbody:not(:only-of-type):hover,
  .c24 > tbody:only-of-type > tr:hover {
    background: #c8d3d9;
  }
}

@media print {
  .c42 {
    border-collapse: collapse;
  }
}

@media screen {
  .c42 > tbody:nth-of-type(even),
  .c42 > tbody:only-of-type > tr:nth-of-type(even) {
    background: #eeeeee;
  }

  .c42 > tbody:not(:only-of-type):hover,
  .c42 > tbody:only-of-type > tr:hover {
    background: #c8d3d9;
  }
}

@media print {
  .c25 {
    border-bottom: 1px solid black;
  }

  .c25 a,
  .c25 a:hover {
    -webkit-text-decoration: none;
    text-decoration: none;
    color: #000;
  }
}

@media print {
  .c26 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

@media print {
  .c28 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

@media print {
  .c43 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

@media print {
  .c44 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

<body>
  <div
    id="portals"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
              data-testid="dialog-title-bar"
            >
              <span>
                Edit Scan Config
              </span>
              <div
                class="c4 c5"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c6"
            >
              <div
                class="c7"
                data-testid="save-dialog-content"
              >
                <div
                  class="c8"
                >
                  <div
                    class="c9"
                  >
                    <label
                      class="c10"
                      data-testid="formgroup-title"
                    >
                      Name
                    </label>
                    <div
                      class="c11"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c12 c13"
                        name="name"
                        size="30"
                        type="text"
                        value="Config"
                      />
                    </div>
                  </div>
                  <div
                    class="c9"
                  >
                    <label
                      class="c10"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c11"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c12 c13"
                        name="comment"
                        size="30"
                        type="text"
                        value="bar"
                      />
                    </div>
                  </div>
                  <section>
                    <div
                      class="section-header c14"
                    >
                      <h2
                        class="c15 c16"
                      >
                        <div
                          class="c17"
                        >
                          Edit Network Vulnerability Test Families (4)
                        </div>
                      </h2>
                      <div
                        class="c18"
                      >
                        <div
                          class="c19"
                        >
                          <span
                            class="section-fold-icon c20 c21"
                            data-testid="svg-icon"
                            title="Fold"
                          >
                            <svg>
                              unfold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c22"
                    >
                      <div
                        class="c23"
                      >
                        <table
                          class="c24"
                        >
                          <thead
                            class="c25"
                          >
                            <tr>
                              <th
                                class="c26"
                              >
                                <div
                                  class="c27"
                                >
                                  Family
                                </div>
                              </th>
                              <th
                                class="c26"
                              >
                                <div
                                  class="c27"
                                >
                                  NVTs selected
                                </div>
                              </th>
                              <th
                                class="c26"
                              >
                                <div
                                  class="c27"
                                >
                                  Trend
                                </div>
                              </th>
                              <th
                                class="c28"
                              >
                                <div
                                  class="c27"
                                >
                                  Select all NVTs
                                </div>
                              </th>
                              <th
                                class="c26"
                              >
                                <div
                                  class="c29"
                                >
                                  Actions
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td>
                                <div
                                  class="c8"
                                >
                                  family1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c30"
                                >
                                  1 of 1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c31"
                                >
                                  <div
                                    class="c32"
                                  >
                                    <div
                                      class="c33"
                                      margin="5px"
                                    >
                                      <label
                                        class="c34"
                                      >
                                        <div
                                          class="c32"
                                        >
                                          <div
                                            class="c33"
                                            margin="5px"
                                          >
                                            <input
                                              checked=""
                                              class="c35 c36"
                                              data-testid="radio-input"
                                              name="family1"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c20 "
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c34"
                                      >
                                        <div
                                          class="c32"
                                        >
                                          <div
                                            class="c33"
                                            margin="5px"
                                          >
                                            <input
                                              class="c35 c36"
                                              data-testid="radio-input"
                                              name="family1"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c20 "
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c37"
                                >
                                  <label
                                    class="c34"
                                  >
                                    <div
                                      class="c32"
                                    >
                                      <div
                                        class="c33"
                                        margin="5px"
                                      >
                                        <input
                                          checked=""
                                          class="c38 c36"
                                          name="family1"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c39"
                                >
                                  <span
                                    class="c20 c21"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg>
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td>
                                <div
                                  class="c8"
                                >
                                  family2
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c30"
                                >
                                  2 of 4
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c31"
                                >
                                  <div
                                    class="c32"
                                  >
                                    <div
                                      class="c33"
                                      margin="5px"
                                    >
                                      <label
                                        class="c34"
                                      >
                                        <div
                                          class="c32"
                                        >
                                          <div
                                            class="c33"
                                            margin="5px"
                                          >
                                            <input
                                              class="c35 c36"
                                              data-testid="radio-input"
                                              name="family2"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c20 "
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c34"
                                      >
                                        <div
                                          class="c32"
                                        >
                                          <div
                                            class="c33"
                                            margin="5px"
                                          >
                                            <input
                                              checked=""
                                              class="c35 c36"
                                              data-testid="radio-input"
                                              name="family2"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c20 "
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c37"
                                >
                                  <label
                                    class="c34"
                                  >
                                    <div
                                      class="c32"
                                    >
                                      <div
                                        class="c33"
                                        margin="5px"
                                      >
                                        <input
                                          class="c38 c36"
                                          name="family2"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c39"
                                >
                                  <span
                                    class="c20 c21"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg>
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td>
                                <div
                                  class="c8"
                                >
                                  family3
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c30"
                                >
                                  0 of 2
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c31"
                                >
                                  <div
                                    class="c32"
                                  >
                                    <div
                                      class="c33"
                                      margin="5px"
                                    >
                                      <label
                                        class="c34"
                                      >
                                        <div
                                          class="c32"
                                        >
                                          <div
                                            class="c33"
                                            margin="5px"
                                          >
                                            <input
                                              class="c35 c36"
                                              data-testid="radio-input"
                                              name="family3"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c20 "
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c34"
                                      >
                                        <div
                                          class="c32"
                                        >
                                          <div
                                            class="c33"
                                            margin="5px"
                                          >
                                            <input
                                              checked=""
                                              class="c35 c36"
                                              data-testid="radio-input"
                                              name="family3"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c20 "
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c37"
                                >
                                  <label
                                    class="c34"
                                  >
                                    <div
                                      class="c32"
                                    >
                                      <div
                                        class="c33"
                                        margin="5px"
                                      >
                                        <input
                                          class="c38 c36"
                                          name="family3"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c39"
                                >
                                  <span
                                    class="c20 c21"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg>
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td>
                                <div
                                  class="c8"
                                >
                                  family4
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c30"
                                >
                                  0 of 6
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c31"
                                >
                                  <div
                                    class="c32"
                                  >
                                    <div
                                      class="c33"
                                      margin="5px"
                                    >
                                      <label
                                        class="c34"
                                      >
                                        <div
                                          class="c32"
                                        >
                                          <div
                                            class="c33"
                                            margin="5px"
                                          >
                                            <input
                                              class="c35 c36"
                                              data-testid="radio-input"
                                              name="family4"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c20 "
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c34"
                                      >
                                        <div
                                          class="c32"
                                        >
                                          <div
                                            class="c33"
                                            margin="5px"
                                          >
                                            <input
                                              checked=""
                                              class="c35 c36"
                                              data-testid="radio-input"
                                              name="family4"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c20 "
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c37"
                                >
                                  <label
                                    class="c34"
                                  >
                                    <div
                                      class="c32"
                                    >
                                      <div
                                        class="c33"
                                        margin="5px"
                                      >
                                        <input
                                          class="c38 c36"
                                          name="family4"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c39"
                                >
                                  <span
                                    class="c20 c21"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg>
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                  <section>
                    <div
                      class="section-header c14"
                    >
                      <h2
                        class="c15 c16"
                      >
                        <div
                          class="c17"
                        >
                          Edit Scanner Preferences (1)
                        </div>
                      </h2>
                      <div
                        class="c18"
                      >
                        <div
                          class="c19"
                        >
                          <span
                            class="section-fold-icon c20 c21"
                            data-testid="svg-icon"
                            title="Unfold"
                          >
                            <svg>
                              fold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c40"
                    >
                      <div
                        class="c23"
                      >
                        <table
                          class="c24"
                        >
                          <thead
                            class="c25"
                          >
                            <tr>
                              <th
                                class="c26"
                              >
                                <div
                                  class="c27"
                                >
                                  Name
                                </div>
                              </th>
                              <th
                                class="c26"
                              >
                                <div
                                  class="c27"
                                >
                                  New Value
                                </div>
                              </th>
                              <th
                                class="c26"
                              >
                                <div
                                  class="c27"
                                >
                                  Default Value
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td>
                                <div
                                  class="c8"
                                >
                                  Scanner Preference 1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c8"
                                >
                                  <input
                                    class="c41 c13"
                                    name="scannerpref0"
                                    type="text"
                                    value="0"
                                  />
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c8"
                                />
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                  <section>
                    <div
                      class="section-header c14"
                    >
                      <h2
                        class="c15 c16"
                      >
                        <div
                          class="c17"
                        >
                          Network Vulnerability Test Preferences (3)
                        </div>
                      </h2>
                      <div
                        class="c18"
                      >
                        <div
                          class="c19"
                        >
                          <span
                            class="section-fold-icon c20 c21"
                            data-testid="svg-icon"
                            title="Unfold"
                          >
                            <svg>
                              fold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c40"
                    >
                      <div
                        class="c23"
                      >
                        <table
                          class="c42"
                        >
                          <thead
                            class="c25"
                          >
                            <tr>
                              <th
                                class="c43"
                              >
                                <div
                                  class="c27"
                                >
                                  NVT
                                </div>
                              </th>
                              <th
                                class="c43"
                              >
                                <div
                                  class="c27"
                                >
                                  Name
                                </div>
                              </th>
                              <th
                                class="c43"
                              >
                                <div
                                  class="c27"
                                >
                                  Value
                                </div>
                              </th>
                              <th
                                class="c44"
                              >
                                <div
                                  class="c29"
                                >
                                  Actions
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td
                                class="c45"
                              >
                                <div
                                  class="c8"
                                >
                                  preference0
                                </div>
                              </td>
                              <td
                                class="c45"
                              >
                                <div
                                  class="c8"
                                >
                                  preference1
                                </div>
                              </td>
                              <td
                                class="c45"
                              >
                                <div
                                  class="c8"
                                >
                                  3
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c39"
                                >
                                  <span
                                    class="c20 c21"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config NVT Details"
                                  >
                                    <svg>
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class="c45"
                              >
                                <div
                                  class="c8"
                                >
                                  preference1
                                </div>
                              </td>
                              <td
                                class="c45"
                              >
                                <div
                                  class="c8"
                                >
                                  preference2
                                </div>
                              </td>
                              <td
                                class="c45"
                              >
                                <div
                                  class="c8"
                                >
                                  4
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c39"
                                >
                                  <span
                                    class="c20 c21"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config NVT Details"
                                  >
                                    <svg>
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class="c45"
                              >
                                <div
                                  class="c8"
                                >
                                  preference2
                                </div>
                              </td>
                              <td
                                class="c45"
                              >
                                <div
                                  class="c8"
                                >
                                  preference
                                </div>
                              </td>
                              <td
                                class="c45"
                              >
                                <div
                                  class="c8"
                                >
                                  5
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c39"
                                >
                                  <span
                                    class="c20 c21"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config NVT Details"
                                  >
                                    <svg>
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
            <div
              class="c46"
            >
              <button
                class="c47 c48 c49"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c47 c48 c49"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c50"
          >
            <div
              class="c51"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`EditScanConfigDialog component tests should render dialog for config in use 1`] = `
<body>
  <div
    id="portals"
  >
    .c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102,102,102,0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c19 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c18 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient( -45deg, transparent, transparent 2px, #000 2px, #000 3px );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #787878;
  border-radius: 3px;
  border: 1px solid #787878;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #519032;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #519032;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5:hover {
  color: #fff;
  background: #519032;
}

.c4 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c4 * {
  height: inherit;
  width: inherit;
}

.c17 {
  display: inline-block;
  padding: 0 15px;
  color: #393637;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #aaaaaa;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c17:focus,
.c17:hover {
  border: 1px solid #393637;
}

.c17:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #66c430;
  font-weight: bold;
  color: #fff;
}

.c17[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c17 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c17:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #393637;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  border: 1px solid #787878;
  color: #519032;
  background: #87d050;
}

.c15:hover {
  color: #fff;
  background: #519032;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #c8d3d9;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #787878;
  color: #fff;
  font-weight: bold;
  background: #66c430;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c7 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  overflow: hidden;
  height: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c10 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 16.66666667%;
  margin-left: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 83.33333333%;
  padding-left: 10px;
  padding-right: 10px;
}

.c13 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #393637;
  background-color: #fff;
  background-image: none;
  border: 1px solid #aaaaaa;
  border-radius: 2px;
  padding: 1px 8px;
}

.c13:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
              data-testid="dialog-title-bar"
            >
              <span>
                Edit Scan Config
              </span>
              <div
                class="c4 c5"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c6"
            >
              <div
                class="c7"
                data-testid="save-dialog-content"
              >
                <div
                  class="c8"
                >
                  <div
                    class="c9"
                  >
                    <label
                      class="c10"
                      data-testid="formgroup-title"
                    >
                      Name
                    </label>
                    <div
                      class="c11"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c12 c13"
                        name="name"
                        size="30"
                        type="text"
                        value="Config"
                      />
                    </div>
                  </div>
                  <div
                    class="c9"
                  >
                    <label
                      class="c10"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c11"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c12 c13"
                        name="comment"
                        size="30"
                        type="text"
                        value="bar"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c14"
            >
              <button
                class="c15 c16 c17"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c15 c16 c17"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c18"
          >
            <div
              class="c19"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`EditScanConfigDialog component tests should render dialog for osp config 1`] = `
<body>
  <div
    id="portals"
  >
    .c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c27 {
  cursor: pointer;
}

.c26 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c26 * {
  height: inherit;
  width: inherit;
}

.c28 {
  overflow: hidden;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  display: none;
  height: 0;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #c8d3d9;
  position: relative;
}

.c22 {
  margin: 0 0 1px 0;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  word-break: break-all;
  min-width: 100px;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 3px;
  margin-top: -2px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102,102,102,0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c40 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c39 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient( -45deg, transparent, transparent 2px, #000 2px, #000 3px );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #787878;
  border-radius: 3px;
  border: 1px solid #787878;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #519032;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #519032;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5:hover {
  color: #fff;
  background: #519032;
}

.c4 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c4 * {
  height: inherit;
  width: inherit;
}

.c38 {
  display: inline-block;
  padding: 0 15px;
  color: #393637;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #aaaaaa;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c38:focus,
.c38:hover {
  border: 1px solid #393637;
}

.c38:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #66c430;
  font-weight: bold;
  color: #fff;
}

.c38[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c38 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c38:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #393637;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c36 {
  border: 1px solid #787878;
  color: #519032;
  background: #87d050;
}

.c36:hover {
  color: #fff;
  background: #519032;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #c8d3d9;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #787878;
  color: #fff;
  font-weight: bold;
  background: #66c430;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c7 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  overflow: hidden;
  height: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c10 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 16.66666667%;
  margin-left: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 83.33333333%;
  padding-left: 10px;
  padding-right: 10px;
}

.c19 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  margin: 1px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c18 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c18 * {
  height: inherit;
  width: inherit;
}

.c15 {
  border: 1px solid #aaaaaa;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1px 5px;
  background-color: #fff;
  color: #000;
  font-weight: normal;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 180px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  word-break: keep-all;
  white-space: nowrap;
  overflow: hidden;
  cursor: pointer;
  cursor: default;
}

.c30 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c30 th,
.c30 td {
  padding: 4px 10px;
  border-bottom: 1px solid #c8d3d9;
}

.c30 tfoot tr {
  background: #fff;
}

.c30 tfoot tr td {
  border-bottom: 1px solid #c8d3d9;
}

.c31 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
}

.c31 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000;
}

.c32 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
}

.c13 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #393637;
  background-color: #fff;
  background-image: none;
  border: 1px solid #aaaaaa;
  border-radius: 2px;
  padding: 1px 8px;
}

.c13:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media print {
  .c27 {
    display: none;
  }
}

@media print {
  .c30 {
    border-collapse: collapse;
  }
}

@media screen {
  .c30 > tbody:nth-of-type(even),
  .c30 > tbody:only-of-type > tr:nth-of-type(even) {
    background: #eeeeee;
  }

  .c30 > tbody:not(:only-of-type):hover,
  .c30 > tbody:only-of-type > tr:hover {
    background: #c8d3d9;
  }
}

@media print {
  .c31 {
    border-bottom: 1px solid black;
  }

  .c31 a,
  .c31 a:hover {
    -webkit-text-decoration: none;
    text-decoration: none;
    color: #000;
  }
}

@media print {
  .c32 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
              data-testid="dialog-title-bar"
            >
              <span>
                Edit Scan Config
              </span>
              <div
                class="c4 c5"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c6"
            >
              <div
                class="c7"
                data-testid="save-dialog-content"
              >
                <div
                  class="c8"
                >
                  <div
                    class="c9"
                  >
                    <label
                      class="c10"
                      data-testid="formgroup-title"
                    >
                      Name
                    </label>
                    <div
                      class="c11"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c12 c13"
                        name="name"
                        size="30"
                        type="text"
                        value="Config"
                      />
                    </div>
                  </div>
                  <div
                    class="c9"
                  >
                    <label
                      class="c10"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c11"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c12 c13"
                        name="comment"
                        size="30"
                        type="text"
                        value="bar"
                      />
                    </div>
                  </div>
                  <div
                    class="c9"
                  >
                    <label
                      class="c10"
                      data-testid="formgroup-title"
                    >
                      Scanner
                    </label>
                    <div
                      class="c11"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-0-label"
                        class="c14"
                        role="combobox"
                        width="180px"
                      >
                        <div
                          aria-haspopup="true"
                          aria-label="open menu"
                          class="c15"
                          data-toggle="true"
                          role="button"
                          type="button"
                        >
                          <div
                            class="c16"
                            data-testid="select-selected-value"
                            title="scanner1"
                          >
                            scanner1
                          </div>
                          <div
                            class="c17"
                          >
                            <span
                              class="c18 c19"
                              data-testid="select-open-button"
                            >
                              ▼
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <section>
                    <div
                      class="section-header c20"
                    >
                      <h2
                        class="c21 c22"
                      >
                        <div
                          class="c23"
                        >
                          Edit Scanner Preferences (1)
                        </div>
                      </h2>
                      <div
                        class="c24"
                      >
                        <div
                          class="c25"
                        >
                          <span
                            class="section-fold-icon c26 c27"
                            data-testid="svg-icon"
                            title="Unfold"
                          >
                            <svg>
                              fold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c28"
                    >
                      <div
                        class="c29"
                      >
                        <table
                          class="c30"
                        >
                          <thead
                            class="c31"
                          >
                            <tr>
                              <th
                                class="c32"
                              >
                                <div
                                  class="c33"
                                >
                                  Name
                                </div>
                              </th>
                              <th
                                class="c32"
                              >
                                <div
                                  class="c33"
                                >
                                  New Value
                                </div>
                              </th>
                              <th
                                class="c32"
                              >
                                <div
                                  class="c33"
                                >
                                  Default Value
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td>
                                <div
                                  class="c8"
                                >
                                  Scanner Preference 1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c8"
                                >
                                  <input
                                    class="c34 c13"
                                    name="scannerpref0"
                                    type="text"
                                    value="0"
                                  />
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c8"
                                />
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
            <div
              class="c35"
            >
              <button
                class="c36 c37 c38"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c36 c37 c38"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c39"
          >
            <div
              class="c40"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;
